--- a/src/app/market-place/market-place.component.html
+++ b/src/app/market-place/market-place.component.html
@@ -13,7 +13,7 @@
               </div>
               <h3 class="card-title">69$</h3>
               <ul>
-                <li>New project in {{project.sector}} has been created, its located in {{project.location}}</li>
+                <li>New project has been created, its located in {{ project.location }}</li>
                 <li>6 months access to the library</li>
               </ul>
             </div>
