--- a/src/app/projects/view/view.component.css
+++ b/src/app/projects/view/view.component.css
@@ -24,3 +24,13 @@
     padding-left: 1px;
     padding-right: 0px;
 }
+
+/* .dmmm{
+
+} */
+
+.clrs-h2 {
+    font-family: AR ESSENCE;
+    /* color: steelblue; */
+    font-size: 20px;
+}
