--- a/src/assets/scss/paper-dashboard/_tables.scss
+++ b/src/assets/scss/paper-dashboard/_tables.scss
@@ -16,6 +16,7 @@
         padding-left: 1em;
         padding-bottom: 0px;
         padding-top: 0px;
+        width: max-content;
     }
     
     .img-wrapper{
