--- a/src/app/calendar/timesheet/timesheet.component.html
+++ b/src/app/calendar/timesheet/timesheet.component.html
@@ -1,79 +1,123 @@
-<div class="col-md-12" style="margin-top: 10em">
-  <div class="card">
+<div class="col-md-12" style="margin-left: -3em;margin-right: 3em">
+  <div class="card-plain">
     <div class="card-body">
-      TimeSheet
-      <div id="accordionActionData" role="tablist" aria-multiselectable="true" class="card-collapse">
-        <ol>
-          <li class="" style="color:steelblue" *ngFor="let item of myActionItems">
-            <div class="card card-plain">
-              <div class="card-header" role="tab" id="heading2">
-                <a class="collapsed" data-toggle="collapse" href="#{{ item.id }}" aria-expanded="false" aria-current="false">
-                  <span class="label text-info">{{ item.name }}</span> Today's Target<span class="label text-warning"> {{ item.targetQty }} {{ item.siu }}</span><i class="nc-icon nc-minimal-down"></i>
-                </a>
-              </div>
-              <div id="{{ item.id }}" class="collapse" data-parent="#accordionActionData" role="tabpanel" aria-labelledby="heading2">
-                <div class="card-body">
-                  <div class="row">
-                    <div for="" class="col-sm-2 card-category">Actual Measure</div>
-                    <div class="col-sm-5">
-                      <div class="form-group">
-                        <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                          <input type="text" class="form-control panel-boader" [(ngModel)]="actualData.qty" style=" padding-left: 10px; padding-right: 10px; height:2em"
-                            placeholder="Enter Data" /><!-- clrs-cell  -->
-                          <div class="input-group-postpend">
-                            <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
-                              <small>{{ item.siu }}</small>
-                            </span>
+      <div class="row">
+        <div class="card col-md-12">
+          <div class="row">
+            <div class="col-md-4">
+              <p class="na-p">Your ToDo List Diary</p>
+            </div>
+            <div class="col-md-4 text-left">
+              <p class="clrs-h4 text-center"><span id="thrs">{{ nHrs }}</span>:<span id="tmins">{{ nMin }}</span></p>
+            </div>
+            <div class="col-md-4 text-right">Today`s Overview</div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">
+          <p class="category text-left" style="margin-bottom:-1em; padding-left: 25px;">
+            Click on the task to Enter the Actuals
+          </p><br>
+          <div id="accordionActionData" role="tablist" aria-multiselectable="true" class="card-collapse">
+            <ol style="padding-left: 0px;">
+              <li class="" style="color:steelblue" *ngFor="let item of myActionItems">
+                <div class="card card-plain" *ngIf="item.champion.id == userId; else showNonChampField">
+                  <div class="card-header" role="tab" id="heading2">
+                    <a class="collapsed row col-md-12" data-toggle="collapse" href="#{{ item.id }}" (click)="selectAction(item)" aria-expanded="false" aria-current="false">
+                      <!-- <span class="label text-info" style="width: 5em;"><small>{{ item.name }}</small></span> -->
+                      <!-- <span class="label text-info" style="width: 5em;">{{ item.name }}</span>
+                      <span style="width: 12em;" class="pull-right"><small *ngIf="item.targetQty">Target 
+                        <span class="label text-warning">{{ item.targetQty }} {{ item.unit }}</span></small>
+                        <i class="nc-icon nc-minimal-down"></i>
+                      </span> -->
+                      <span class="label text-info card-category" style="width: 20em;">{{ item.name }}
+                        <span style="width: 10em;" class="pull-right"><small *ngIf="item.targetQty">Target
+                            <span class="label text-warning">{{ item.targetQty }} {{ item.unit }}</span></small>
+                          <i class="nc-icon nc-minimal-down"></i>
+                        </span>
+                      </span>
+                    </a>
+                  </div>
+                  <div id="{{ item.id }}" class="collapse" data-parent="#accordionActionData" role="tabpanel" aria-labelledby="heading2">
+                    <div class="card-body">
+                      <div class="row">
+                        <!-- <div for="" class="col-sm-5 card-category">Measurement</div> -->
+                        <div class="col-sm-9">
+                          <p class="category text-left" style="margin-bottom: 0px;">Enter Actual Measurements </p>
+                          <div class="form-group">
+                            <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                              <input type="number" class="form-control panel-boader" [(ngModel)]="dmData.qty" style=" padding-left: 10px; padding-right: 10px; height:2em"
+                                placeholder="Enter Data" /><!-- clrs-cell  -->
+                                
+                              <div class="input-group-postpend">
+                                <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
+                                  <small>{{ item.unit }}</small>
+                                </span>
+                              </div>
+                            </div>
                           </div>
+                        </div>
+                        <div class="col-sm-2 card-category">
+                          <!-- <button class="btn-link btn-round primary" (click)="saveActual(actualData)" style="margin-top: 11px"> -->
+                          <button class="btn-link btn-round primary" (click)="saveActual(dmData)" style="margin-top: 11px">
+                            <small> Save </small>
+                          </button>
                         </div>
                       </div>
                     </div>
-                    <div for="" class="col-sm-3 card-category">
-                      <button class="btn-link btn-round primary" (click)="saveActual(actualData)">
-                      <small>Save</small></button>
-                    </div>
                   </div>
                 </div>
-<!-- <div class="card-body">
-  <div class="row">
-    <label for="" class="col-sm-6">Actual Measure</label>
-    <label for="" class="col-sm-6">End of Day's Target</label>
-  </div>
-  <div class="row">
-    <div class="col-sm-6" style="padding-left: 5px; padding-right:5px">
-      <div class="form-group">
-        <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-          <input type="text" class="col-sm-6 form-control panel-boader" [(ngModel)]="item.actualQty" style=" padding-left: 10px; padding-right: 10px; height:2em"
-            placeholder="Enter Data" />
-          <div class="input-group-postpend">
-            <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
-              <small>{{ item.siu }}</small>
-            </span>
+                <ng-template #showNonChampField>
+                  <div class="row">
+                    <div class="col-md-9 text-info">
+                      {{ item.name }}
+                    </div>
+                    <div class="col-md-3" style="padding-top: 5px;">
+                      <input class="card-category col-form-label" type="checkbox" (change)="updateAction($event, item)">
+                    </div>
+                  </div>
+                </ng-template>
+              </li>
+            </ol>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6" style="padding-left: 5px; padding-right:5px">
-      <div class="form-group">
-        <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-          <input type="text" disabled class="col-sm-6 form-control panel-boader" [(ngModel)]="item.targetQty" style=" padding-left: 10px; padding-right: 10px; height:2em"
-            placeholder="1 200" />
-          <div class="input-group-postpend">
-            <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
-              <small>{{ item.siu }}</small>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-                
+          <div class="col-md-12 card-footer" style="padding-right: 0px; padding-left: 0px;">
+            <code> add new work item</code>
+            <div class="form-group">
+              <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                <input type="text" class="form-control panel-boader" [(ngModel)]="item.name" style=" padding-left: 10px; padding-right: 10px; height:2em"
+                  placeholder="Enter current unplanned activity" /><!-- clrs-cell  -->
+                <div class="input-group-postpend">
+                  <span class="input-group-text" style=" padding-left: 10px; padding-right: 10px; height:28px">
+                    <small>
+                      <button class="" (click)="unPlannedTAsk(item)" title="Add item" style="padding-top: 0px; padding-bottom: 0px; cursor: pointer;">
+                        Add
+                      </button>
+                    </small>
+                  </span>
+                </div>
               </div>
             </div>
-          </li>
-        </ol>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <ngx-charts-pie-chart *ngIf = "chartdata"
+            [view]="view"
+            [scheme]="colorScheme"
+            [results]="workItemData"
+            [legend]="showLegend"
+            [explodeSlices]="explodeSlices"
+            [labels]="showLabels"
+            [doughnut]="doughnut"
+            (select)="onSelect($event)">
+          </ngx-charts-pie-chart><!-- [labels]="showLabels" -->
+        </div>
       </div>
+      <!-- <div class="row">
+        <div class="card-footer col-md-10">
+          <code> add new work item</code>
+        </div>
+      </div> -->
     </div>
   </div>
 </div>
