--- a/src/app/projects/join-project/join-project.component.html
+++ b/src/app/projects/join-project/join-project.component.html
@@ -82,7 +82,7 @@
                             <td class="text-left tab-cell">{{ project.location }}</td>
                             <td class="text-center">
                               <button class="success btn-link join" rel="tooltip" title="Connect to {{project.name}}"
-                                (click)="selectPoject(project)" data-toggle="modal" data-target="#myModal9">
+                                (click)="selectPoject(project)" data-toggle="modal" data-target="#myModalNO">
                                 <font size=2>Join </font>
                               </button>
                           </tr>
@@ -176,18 +176,37 @@
     </div>
   </div>
 </div>
-<div class="modal fade" id="myModal9" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal99" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header justify-content-center">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <i class="nc-icon nc-simple-remove"></i>
         </button>
-        <p class="title-up">You want to join {{ (projectToJoin)?.name }} project.<br><span *ngIf="showme">You have
-            selected {{selectedCompany.name}} company</span></p>
+        <p class="title-up">Select Company to Join {{ (projectToJoin)?.name }} project.<br>
       </div>
       <div class="modal-body">
-        <div class="table-responsive cont scrol-em"><!--  pro_info -->
+        <span *ngIf="showme" class="card-category"> 1.  Company joining the Project :<b> {{selectedCompany.name}} </b><button class="btn-link" (click)="showEnterpriseTable()">change</button></span><br>
+        <span *ngIf="showText" class="card-category"><button class="btn-link" (click)="hideText2()">2. Select Company Champion  for this Project</button></span>        
+        <span *ngIf="showCompUser" class="card-category"> 2.  Company Project Champion :<b> {{selectedStaff.name}} </b><button class="btn-link" (click)="showUsersTable()">change</button></span>
+        <span *ngIf="showRole" class="card-category">
+          <div class="row">
+            <label class="col-md-3 col-form-label">3. Roles</label>
+            <div class="col-lg-5 col-md-6 col-sm-3">
+              <select class="" data-size="7" data-style="btn btn-primary btn-round" title="Select Role">
+                <option disabled selected>Single Option</option>
+                <option value="2">Project Manager</option>
+                <option value="3">Civils</option>
+                <option value="4">Quantity Survey</option>
+                <option value="5">Plumbing</option>
+                <option value="6">Land Scapping</option>
+                <option value="7">Architecture</option>
+              </select>
+            </div>
+          </div>
+        </span>
+        <div class="table-responsive cont scrol-em" *ngIf="show">
+          <small>Select Company to Join the Project from the list</small>
           <table class="table">
             <thead class="card-category blue-clr">
               <th class="text-left">Company</th>
@@ -197,8 +216,27 @@
               <tr *ngFor="let ent of enterprises | async ">
                 <td class="text-left">{{ ent.name }} </td>
                 <td class="text-center">
-                  <a class="warning btn-link select" routerLink="#" (click)="toggleName(); selectCompany(ent)"
-                    data-toggle="modal" data-target="#noticeModal">
+                  <a class="warning btn-link select" style="cursor:pointer" (click)="toggleName(); selectCompany(ent)">
+                    <font size=2>Select</font>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+    
+        <div class="table-responsive cont scrol-em" *ngIf="showCompWorkers">
+          <small>Select Company contact person from the company list of Employees</small>
+          <table class="table">
+            <thead class="card-category blue-clr">
+              <th class="text-left">Company</th>
+              <th class="text-center">Action</th>
+            </thead>
+            <tbody>
+              <tr *ngFor="let person of staff | async ">
+                <td class="text-left">{{ person.name }} </td>
+                <td class="text-center">
+                  <a class="warning btn-link select" style="cursor:pointer" (click)="showUser(); selectStaff(person)">
                     <font size=2>Select</font>
                   </a>
                 </td>
@@ -213,7 +251,50 @@
         </div>
         <div class="divider"></div>
         <div class="right-side">
-          <button type="button" class="btn btn-danger btn-link" (click)="connect2Project()" data-dismiss="modal">Confirm</button>
+          <button type="button" class="btn btn-danger btn-link" (click)="sendRequest()" data-dismiss="modal">Confirm</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="myModalNO" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header justify-content-center">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="nc-icon nc-simple-remove"></i>
+        </button>
+        <p class="title-up clrs-h1">Select Company to Join {{ (projectToJoin)?.name }} project.<br>
+      </div>
+      <div class="card-body ">
+        
+        <form class="form-horizontal">
+          <div class="row">
+            <label class="col-md-4 col-form-label text-left" style="margin-left: 2em;">Company</label>
+            <div class="col-md-7 col-lg-6 col-sm-5">
+              <ng-select [items]="enterprises2nd | async" bindLabel="name" name="WorkAction" placeholder="Select company"
+                (change)="selectCompany(ent)" [(ngModel)]="ent">
+              </ng-select>
+            </div>
+          </div>
+          <div class="row">
+            <label class="col-md-4 col-form-label text-left" style="margin-left: 2em;">Champion</label>
+            <div class="col-md-7 col-lg-6 col-sm-5">
+              <ng-select [items]="staff | async" bindLabel="name" name="WorkAction" placeholder="Select champion"
+                (change)="selectStaff(person)" [(ngModel)]="person">
+              </ng-select>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <div class="left-side">
+          <button type="button" class="btn btn-default btn-link" data-dismiss="modal">Never mind</button>
+        </div>
+        <div class="divider"></div>
+        <div class="right-side">
+          <button type="button" class="btn btn-danger btn-link" (click)="sendRequest()" data-dismiss="modal">Confirm</button>
         </div>
       </div>
     </div>
